fix(App) carousel size, align

--- a/app/[locale]/(company)/about/page.module.css
+++ b/app/[locale]/(company)/about/page.module.css
@@ -9,6 +9,7 @@
 .carousel-inner {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: calc(100vw - 15px);
 }
 
